Fixed alignment on table and up

--- a/src/sass/components/_toggleGroup.scss
+++ b/src/sass/components/_toggleGroup.scss
@@ -70,6 +70,7 @@
       &-group {
         grid-template-columns: 350px 1fr;
         gap: 32px;
+        align-items: center;
         @include pixelsToResponsiveUnit(gap, 32px, 50px, 100px);
       }
 
